# Automated-Essay-Scoring

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  run.py
.dvc/: config
automated_essay_scoring/: __init__.py  do_infer.py  do_train.py  run.py
automated_essay_scoring/common/: calc_ensemble_weights.py  cfg_utils.py  common.py  constants.py  data_modules.py  dataset.py  finetune_model.py  hydra.py  inference_lightning.py  lightning_modules.py  logging_config.py  model.py  model_utils.py  modify_train_data.py  train_lightning.py  utils.py
automated_essay_scoring/conf/: defaults.yaml  ensemble.yaml  pretrain.yaml
automated_essay_scoring/conf/ensemble/: base.yaml  cfg1.yaml  cfg10.yaml  cfg2.yaml  cfg3.yaml  cfg4.yaml  cfg5.yaml  cfg6.yaml  cfg7.yaml  cfg8.yaml  cfg9.yaml
automated_essay_scoring/dataset/: data_modules.py
automated_essay_scoring/deberta_tuning/: __init__.py  train_deberta.py
automated_essay_scoring/finetune/: finetune_model.py
automated_essay_scoring/inference/: __init__.py  client_side.py  inference_and_submission.py  inference_lightning.py  nelder_mead.py  oof.py  server_side.py
automated_essay_scoring/model/: lightning_modules.py  model.py
automated_essay_scoring/preprocessing/: modify_train_data.py
automated_essay_scoring/train/: __init__.py  calc_ensemble_weights.py  convertions.py  funcs_for_training_and_validating.py  prepare_to_infer.py  train_and_validation_funcs.py  train_lightning.py  train_loop.py  train_main.py
common/: basic_definitions.py  cfg.py  common.py  constants.py  dataset.py  model.py  model_utils.py  modify_train_data.py  score.py  utils.py
configs/: defaults.yaml  ensemble.yaml
configs/ensemble/: base.yaml  cfg1.yaml  cfg10.yaml  cfg2.yaml  cfg3.yaml  cfg4.yaml  cfg5.yaml  cfg6.yaml  cfg7.yaml  cfg8.yaml  cfg9.yaml
configs/inference/: base.yaml
configs/preprocess/: base.yaml
configs/pretrain/: base.yaml
configs/train/: base.yaml
data/: .gitignore  raw.dvc
deberta_tuning/: __init__.py  train_deberta.py
inference/: __init__.py  data_loading.py  dataset.py  inference_and_submission.py  make_cfg_list.py  model.py  nelder_mead.py  oof.py  tokenizer.py
notebooks/: aes2-3rd-place-submission.ipynb  aes2-3rd-place-train.ipynb  lal-deberta-base-mlm.ipynb
train/: __init__.py  dataset.py  funcs_for_training_and_validating.py  main.py  model.py  tokenizer.py  train_loop.py  train_main.py
