[tool.poetry]
name = "automated_essay_scoring"
version = "0.3.0"
description = "A pipeline for learning and an inference model for automatic grading of written essays."
authors = ["davynci <davydov.mv@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
torch = "^2.6.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
transformers = "^4.49.0"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
text-unidecode = "^1.3"
pre-commit = "^4.1.0"
fire = "^0.7.0"
protobuf = "^5.29.3"
tiktoken = "^0.9.0"
accelerate = "^1.4.0"
pathlib = "^1.0.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
datasets = "^3.5.0"
iterative-stratification = "^0.1.9"
mlflow = "^2.21.3"
lightning = "^2.5.1.post0"
dvc = "^3.59.2"
dvc-s3 = "^3.2.0"
gputil = "^1.4.0"
onnxruntime = "^1.22.0"
onnx = "^1.18.0"
onnxruntime-gpu = "^1.22.0"
pycuda = "^2025.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pytest = "^7.4.4"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
